org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/ClassDefinition/ClassDefinition_no_multiple_inheritance_with_different_bindings/.project
<?xml version="1.0" encoding="UTF-8"?>
<projectDescription>
	<name>ClassDefinition_no_multiple_inheritance_with_different_bindings</name>
	<comment></comment>
	<projects>
	</projects>
	<buildSpec>
	</buildSpec>
	<natures>
		<nature>org.kermeta.language.texteditor.eclipse.nature.KermetaNatureID</nature>
	</natures>
</projectDescription>
